fixes some layout issues

--- a/static/login.css
+++ b/static/login.css
@@ -12,15 +12,8 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-h2 {
-    margin-top: 30px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    text-align: left;
-    /* color: #F9F9F9; */
+    font-weight: bold;
+    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
 }
 
 input {
@@ -47,12 +40,16 @@ button {
     margin: 50px 0 30px;
 }
 
-#login-info {
+.info-to-fill {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 50vw;
     max-width: 500px;
+}
+
+.info-title {
+    align-self: center;
 }
 
 #login-register-btn {
@@ -78,7 +75,6 @@ button {
 }
 /* End of Tab Color*/
 
-
 #login-button {
     font-size: 18px;
     font-weight: bold;
@@ -91,99 +87,16 @@ button {
     align-self: center;
 }
 
-
-#register-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+#remember-me {
+    width: 30px;
+    transform: scale(1.5);
 }
 
-    
-    #login-container, #register-container{
-    /* width: 100%; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    }
-    
-    #register-info {
-        height: 100%;
-    }
-    
-    #register-info input {
-        margin-top: 10px;
-    }
-    
-    /* #login-h1, #register-h1 {
-    /* margin-right: 3%;
-    margin-bottom: 5%; 
-    } */
-    
-    
-    #login-settings {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 70px;
-    align-items: center;
-    justify-content: space-between;
-    }
-    
-    #remember-me {
-    width: 30px;
-    transform: scale(2);
-    }
-    
-    #remember-label {
-    font-size: 20px;
-    }
-    
-    #forgot-password {
+#forgot-password {
+    text-decoration: none;
     color: blue;
     font-size: 18px;
     align-self: center;
-    }
-    
-    #login-link {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-right: 10%;
-    }
-    
-    
-
-    
-
-    
-    #login-register {
-    display: flex;
-    margin-top: 30px;
-    justify-content: center;
-    }
-    
-
-    
-
-    
-    
-    #login-register li {
-    margin: 0 20px;
-    width: 100px;
-    border: none;
-    background-color: rgb(248, 247, 247);
-    }
-    
-    #login-register li a {
-    width: 100%;
-    color: rgb(131, 131, 131);
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: bold;
-    }
-    
-    
-    /* End of Log In Page --------
-    --------------------------------*/
-    
+}
+/* End of Log In Page --------
+--------------------------------*/
